- Fixed a bug causing console spam when betterteams is initally installed (#79)
- Fixed a bug causing errors if a plyaer is not in a team with /teama score (#85) 
- Lowered the chat priority to help support PremiumChat (#75) 
- Fixed a problem with tags overwriting team colors (#81) 

3.1.22:
Bug Fixes: 
- Fixed problem with bows included in 2.1.21 (#87)

3.1.23: 
Features: 
- Added support for UltimateClaims (#63)
- Individual commands can be toggled in a yaml file instead of through permissions (#92)
- The required rank within a team can be changed for each individual command (#92)

Improvements: 
- Added two new placeholders
	- %betterteams_tag% - For the team tag 
	- %betterteams_displayname% - For the display name of the team (#99)
- Added the option to prefix chat with team tag (#99)
- Added a maxMove option to the config for teleport warmup (#97)
- Added language tracking to bstats (#106)
- Commands can be run when a team levels up (#91)
- Added RankupTeamEvent and DisbandTeamEvent to the API

Bug Fixes:
- Fixed problem causing a space to occur at the end of the money and name placeholder (#94)
- Fixed ClassCastException with pots (#98)
- Fixed bug causing invite links to not expire correctly (#93)
- Fixed bug causing ally limits to be ignored (#100)

3.1.24: 
Bug Fixes:
- Fixed a problem with /team top (#103)

3.1.25: 
Bug Fixes:
- Fixed prefixSyntax message having different coloured brackets (#115)
- Fixed bug causing essentialsX /back to not work (#109)
- Fixed bug with /team title when the player is not recognised (#112)

3.1.26:
Improvements: 
- Added placeholder for the number of online players on your team (online) (#110) 

Bug Fixes: 
- Fixed problem with rank permissions


4.0: 
Features: 
- Added support for Traditional Chinese 

Bug Fixes:
- Fixed permission issue with /team echest	


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
